# wf-info-2

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: account.rs  api.rs  control.rs  control_ops.rs  inventory_refresh.rs  lib.rs  logs.rs  main.rs  process.rs  profile.rs  storage.rs  utils.rs  watcher.rs
src/control/: inventory.rs  item_data.rs  mod.rs  requests.rs  screenshot.rs  search.rs  server.rs  state.rs  utils.rs
src/inventory/: long_gun.rs  melee.rs  mod.rs  pistol.rs  recipe.rs  space_gun.rs  space_melee.rs  space_suit.rs  suit.rs  suite.rs  upgrades.rs
src/itemdata/: arcane.rs  arch_gun.rs  arch_melee.rs  archwing.rs  gear.rs  melee.rs  misc.rs  mod.rs  mods.rs  pet.rs  primary.rs  relics.rs  resource.rs  secondary.rs  sentinel.rs  sentinel_weapon.rs  tests.rs  warframe.rs
testdata/: sample_inventory.json
