[package]
name = "wf-info-2"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.10"
notify = "8.2"
notify-debouncer-mini = "0.7"
chrono = {version = "0.4", features = ["serde"] }
anyhow = "1.0.100"
log = "0.4.29"
env_logger = "0.11.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
aes = "0.8"
cbc = "0.1"
rand = "0.9"
dirs = "6.0"
sysinfo = "0.37"
hex = "0.4"
sha2 = "0.10"
multi_index_map = { version = "0.15.1", features = ["serde"] }
rustc-hash = "2.1.1"

[features]
test_with_wf_items = [] # used to test deserialization with downloaded wf-items from https://github.com/WFCD/warframe-items/
